compiler/testData/diagnostics/tests/deprecated/propertyWithInvoke.kt
@Deprecated("No")
val f: () -> Unit = {}

fun test() {
    <!DEPRECATION!>f<!>()
}
